--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -23,6 +23,9 @@
     },
     "apps/ttkDesigner": {
       "package-name": "ttkDesigner"
+    },
+    "apps/ttkode": {
+      "package-name": "ttkode"
     }
   }
 }
