--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,9 +114,10 @@ jobs:
               libs/pyTermTk/TermTk/__init__.py \
               CHANGELOG.md
             find . -name pyproject.toml | xargs git add
-
-            git commit -m "chore: updated TermTk and apps to versions to ${_VERSION_TTK}, ${_VERSION_DPT}, ${_VERSION_T_D} ${_VERSION_KOD}"
-            git push
+            if [[ $(git status --porcelain) ]] ; then
+              git commit -m "chore: updated TermTk and apps to versions to ${_VERSION_TTK}, ${_VERSION_DPT}, ${_VERSION_T_D} ${_VERSION_KOD}"
+              git push
+            fi
           echo '::endgroup::'
 
   pyTermTk-deploy-artifacts:
