apps: added tlogg to the monorepo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,6 +117,17 @@
             }
         },
         {
+            "name": "py Debug: Module tlogg",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "tlogg",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "./apps/tlogg"
+            }
+        },
+        {
             "name": "Python: Demo",
             "type": "debugpy",
             "request": "launch",
