chore: reopen already opened widgets

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -113,7 +113,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "env": {
-                "PYTHONPATH": "./apps/ttkode"
+                "PYTHONPATH": "./apps/ttkode:./libs/pyTermTk"
             }
         },
         {
