--- a/tools/docker/github-runner/Dockerfile
+++ b/tools/docker/github-runner/Dockerfile
@@ -8,7 +8,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Update and install default applications
 RUN apt-get update && apt-get install -y \
-    python3 python3-pip \
+    python3  python3-pip python3-venv \
     maven ant sudo \
     libicu74 sqlite3 \
     gh git curl wget jq \
