--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -26,6 +26,9 @@
     },
     "apps/ttkode": {
       "package-name": "ttkode"
+    },
+    "apps/tlogg": {
+      "package-name": "tlogg"
     }
   }
 }
