--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,6 +1,7 @@
 {
     "libs/pyTermTk": "0.42.1-a.0",
     "apps/ttkode": "0.3.2-a.2",
+    "apps/tlogg": "0.6.0-a.0",
     "apps/ttkDesigner": "0.41.4-a.54",
     "apps/dumbPaintTool": "0.41.9-a.54"
 }
