--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "tools/webExporter/js/ttkproxy.js"
+                "img1.png", "img2.png", "img3.png", "img4.png", "img5.png"
             ]
         },
         {
