--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,64 +1,67 @@
 accessible-pygments==0.0.5
 alabaster==1.0.0
-babel==2.16.0
+babel==2.17.0
 backports.tarfile==1.2.0
-beautifulsoup4==4.12.3
+beautifulsoup4==4.13.4
 build==1.2.2.post1
-certifi==2024.8.30
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.0
-cryptography==43.0.3
+charset-normalizer==3.4.2
+cryptography==45.0.3
 css-html-js-minify==2.5.5
 docutils==0.21.2
-flake8==7.1.1
+flake8==7.2.0
 furo==2024.8.6
+id==1.5.0
 idna==3.10
 imagesize==1.4.1
-importlib_metadata==8.5.0
-iniconfig==2.0.0
+importlib_metadata==8.7.0
+iniconfig==2.1.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
-jeepney==0.8.0
-Jinja2==3.1.4
-keyring==25.4.1
-lxml==5.3.0
+jeepney==0.9.0
+Jinja2==3.1.6
+keyring==25.6.0
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
-more-itertools==10.5.0
-nh3==0.2.18
-packaging==24.1
+more-itertools==10.7.0
+nh3==0.2.21
+packaging==25.0
 piccolo_theme==0.24.0
-pkginfo==1.10.0
-pluggy==1.5.0
-pycodestyle==2.12.1
+pkginfo==1.12.1.2
+pluggy==1.6.0
+pycodestyle==2.13.0
 pycparser==2.22
-pydata-sphinx-theme==0.16.0
-pyflakes==3.2.0
-Pygments==2.18.0
+pydata-sphinx-theme==0.15.4
+pyflakes==3.3.2
+Pygments==2.19.1
 pyproject_hooks==1.2.0
-pytest==8.3.3
+pytest==8.3.5
 python-slugify==8.0.4
 readme_renderer==44.0
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==13.9.3
+rich==14.0.0
+roman-numerals-py==3.1.0
 SecretStorage==3.3.3
-snowballstemmer==2.2.0
-soupsieve==2.6
-Sphinx==8.1.3
+snowballstemmer==3.0.1
+soupsieve==2.7
+Sphinx==8.2.3
 sphinx-autodocgen==1.3
 sphinx-basic-ng==1.0.0b2
-sphinx-book-theme==1.1.3
+sphinx-book-theme==1.1.4
+sphinx-copybutton==0.5.2
 sphinx-epytext==0.0.4
 sphinx-material==0.0.36
-sphinx-rtd-theme==3.0.1
-sphinx-wagtail-theme==6.3.0
+sphinx-rtd-theme==3.0.2
 sphinx_press_theme==0.9.1
-sphinxawesome-theme==5.3.1
+sphinx_wagtail_theme==6.5.0
+sphinxawesome-theme==5.3.2
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -67,8 +70,8 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 text-unidecode==1.3
-twine==5.1.1
-typing_extensions==4.12.2
-Unidecode==1.3.8
-urllib3==2.2.3
-zipp==3.20.2
+twine==6.1.0
+typing_extensions==4.13.2
+Unidecode==1.4.0
+urllib3==2.4.0
+zipp==3.22.0
