--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -30,5 +30,5 @@ jobs:
           ref: ${{ github.sha }}
       - run: |
           echo Scratchpad
-          tools/autogenForwarded.py --apply
+          PYTHONPATH=libs/pyTermTk tools/autogenForwarded.py --apply
           git diff
