--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -25,18 +25,6 @@ jobs:
           GHE: ${{ toJson(github.event) }}
           GHEH: ${{ toJson(github.event.head_commit) }}
           GHEHM: ${{ toJson(github.event.head_commit.modified) }}
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.sha }}
-      - run: |
-          echo Scratchpad
-          PYTHONPATH=libs/pyTermTk tools/autogenForwarded.py --apply
-          if [[ $(git status --porcelain) ]] ; then
-            git diff
-            echo "❌ PR failed due to missing release files:"
-            echo "   - run: PYTHONPATH=libs/pyTermTk tools/autogenForwarded.py --apply"
-            echo "     and push the generated files"
-            exit 1
-          else
-            echo "✅   - Release Clean"
-          fi
+      # - uses: actions/checkout@v4
+      #   with:
+      #     ref: ${{ github.sha }}
