--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,10 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "justMyCode": true,
+            "justMyCode": false,
+            "env": {
+                "PYTHONPATH": "libs/pyTermTk/"
+            },
         },
         {
             "name": "Python: Current File with Args",
@@ -28,6 +31,9 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "env": {
+                "PYTHONPATH": "libs/pyTermTk/"
+            },
             "args": [
                 "tools/webExporter/js/ttkproxy.js"
             ]
