--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -14,7 +14,14 @@ permissions:
   id-token: write
 
 env:
-  MY_ARRAY: '["libs/pyTermTk", "apps/dumbPaintTool", "apps/ttkDesigner", "apps/ttkode", "apps/tlogg"]'
+  MY_ARRAY: '[
+        { "name": "pyTermTk"      , "path": "libs/pyTermTk"},
+        { "name": "dumbPaintTool" , "path": "apps/dumbPaintTool"},
+        { "name": "ttkDesigner"   , "path": "apps/ttkDesigner"},
+        { "name": "ttkode"        , "path": "apps/ttkode"},
+        { "name": "tlogg"         , "path": "apps/tlogg"},
+          "apps/dumbPaintTool", "apps/ttkDesigner", "apps/ttkode", "apps/tlogg"]
+      ]'
 
 jobs:
   test:
@@ -67,6 +74,17 @@ jobs:
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
   build:
+    needs: generate-matrix
+    runs-on: self-hosted
+    strategy:
+      matrix:
+        include: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
+    steps:
+      - name: Build ${{ matrix.app }}
+        run: |
+          echo "Building app at path: ${{ matrix.app }}"
+
+  pippo:
     needs: generate-matrix
     runs-on: self-hosted
     strategy:
