--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -50,7 +50,7 @@ jobs:
           }
 
           # Parse the JSON string into a Bash array
-          my_bash_array=($(echo "$MY_ARRAY" | jq -r '.[ ]'))
+          my_bash_array=($(echo "$MY_ARRAY" | jq -r '.[].name'))
           # Loop through the array
           for item in "${my_bash_array[@]}"; do
             # Update version in the project
