--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -50,7 +50,7 @@ jobs:
           }
 
           # Parse the JSON string into a Bash array
-          my_bash_array=($(echo "$MY_ARRAY" | jq -r '.[].name'))
+          my_bash_array=($(jq -r '.[].name' <<< ${MY_ARRAY}))
           # Loop through the array
           for item in "${my_bash_array[@]}"; do
             # Update version in the project
@@ -68,7 +68,7 @@ jobs:
         id: set-matrix
         run: |
           echo "MY_ARRAY=${MY_ARRAY}"
-          MATRIX=$(echo "${MY_ARRAY}" | jq -c '[.[] | {app: .name, name: .name, path: .path}]'')
+          MATRIX=$(jq -c '[.[] | {app: .name, name: .name, path: .path}]' <<< ${MY_ARRAY )
           echo "matrix=$MATRIX"
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
