--- a/.github/workflows/_scratchpad.yml
+++ b/.github/workflows/_scratchpad.yml
@@ -51,8 +51,20 @@ jobs:
 
           # Parse the JSON string into a Bash array
           my_bash_array=($(jq -r '.[].name' <<< ${MY_ARRAY}))
+          echo ${my_bash_array}
           # Loop through the array
           for item in "${my_bash_array[@]}"; do
+            # Update version in the project
+            _VERSION=$(_get_name ${item})
+            _NAME=$(_get_version ${item})
+            echo "Version ${_NAME}: ${_VERSION}"
+          done
+
+          # Parse the JSON string into a Bash array
+          my_bash_array=($(jq -r '.[].name' <<< ${MY_ARRAY}))
+          echo ${my_bash_array}
+          # Loop through the array
+          for item in $(jq -r '.[].name' <<< ${MY_ARRAY}) ; do
             # Update version in the project
             _VERSION=$(_get_name ${item})
             _NAME=$(_get_version ${item})
@@ -67,7 +79,6 @@ jobs:
       - name: Convert global MY_ARRAY to matrix
         id: set-matrix
         run: |
-          echo "MY_ARRAY=${MY_ARRAY}"
           MATRIX=$(jq -c '[.[] | {app: .name, name: .name, path: .path}]' <<< ${MY_ARRAY )
           echo "matrix=$MATRIX"
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
